# v4l2loopback

examples/: test.c
opencv_video/: CMakeLists.txt  opencv_example copy 2.cpp  opencv_example copy 3.cpp  opencv_example copy.cpp  opencv_example.cpp  opencv_example_gstreamer.cpp  test.py
opencv_video_msi/: CMakeLists.txt  gstreamer.cpp  verification.py
